# controllers/products.js
@@ -13,7 +13,6 @@ const getAll = async (req, res) => {
 const getSingle = async (req, res) => {
   //#swagger.tags=["Products"]
   const productId = new ObjectId(req.params.id);
-  console.log("esta es la productID----" + productId);
   const result = await mongodb
     .getDatabase()
     .collection("products")
@@ -22,17 +21,19 @@ const getSingle = async (req, res) => {
     res.setHeader("Content-Type", "aplication/json");
     res.status(200).json(Products);
   });
-  console.log("doNE");
 };
 
 const createProduct = async (req, res) => {
   //#swagger.tags=["Products"]
+
   const Product = {
-    firstName: req.body.firstName,
-    lastName: req.body.lastName,
-    email: req.body.email,
-    favoriteColor: req.body.favoriteColor,
-    birthday: req.body.birthday,
+    name: req.body.name,
+    sku: req.body.sku,
+    price: req.body.price,
+    stock: req.body.stock,
+    category: req.body.category,
+    isActive: req.body.isActive,
+    createdAt: req.body.createdAt,
   };
 
   const response = await mongodb
@@ -41,7 +42,7 @@ const createProduct = async (req, res) => {
     .insertOne(Product);
 
   if (response.acknowledged) {
-    res.status(204).send("created succesfuly!");
+    res.status(200).send("Product created succesfuly!");
   } else {
     res
       .status(500)
@@ -53,11 +54,13 @@ const updateProduct = async (req, res) => {
   //#swagger.tags=["Products"]
   const productId = new ObjectId(req.params.id);
   const Product = {
-    firstName: req.body.firstName,
-    lastName: req.body.lastName,
-    email: req.body.email,
-    favoriteColor: req.body.favoriteColor,
-    birthday: req.body.birthday,
+    name: req.body.name,
+    sku: req.body.sku,
+    price: req.body.price,
+    stock: req.body.stock,
+    category: req.body.category,
+    isActive: req.body.isActive,
+    createdAt: req.body.createdAt,
   };
 
   const response = await mongodb
@@ -66,7 +69,7 @@ const updateProduct = async (req, res) => {
     .replaceOne({ _id: productId }, Product);
 
   if (response.modifiedCount > 0) {
-    res.status(204).send("updated succesfuly!");
+    res.status(200).send("updated succesfuly!");
   } else {
     res
       .status(500)
@@ -84,7 +87,7 @@ const deleteProduct = async (req, res) => {
     .deleteOne({ _id: productId }, true);
 
   if (response.acknowledged) {
-    res.status(204).send("deleted succesfuly!");
+    res.status(200).send("deleted succesfuly!");
   } else {
     res
       .status(500)
